# ndt_groundtruth_generator

./: CMakeLists.txt  README.md  package.xml
launch/: ndt_groundtruth_generator_v1.0.launch
src/: ndt_groundtruth_generator_v1.0.cpp
src/backups/: ndt_3D_mapmatching_groundtruth_v1.1.1.cpp  ndt_3D_mapmatching_groundtruth_v1.1.cpp  ndt_3D_mapmatching_groundtruth_v1.2.cpp
