<?xml version="1.0"?>
<package>
  <name>ndt_groundtruth_generator</name>
  <version>0.0.1</version>
  <description>
         This package contains the SLAM technology for our AV
  </description>

  <maintainer email="ehsan@kmj.iis.u-tokyo.ac.jp">Ehsan Javanmardi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <!--build_depend>message_genaration</build_depend-->
  <build_depend>velodyne_pointcloud</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msg</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
